Java 5 generics in org.geotools.image.io, and partially in org.geotools.parameters.
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@28069 e5c1c795-43da-0310-a71f-fac65c449510